--- a/style.css
+++ b/style.css
@@ -33,3 +33,12 @@ p {
     font-size: 20px;
 }
 
+.categoria-videos {
+    display: flex;
+    overflow-x: auto;
+    gap: 10px;
+}
+
+.categoria {
+    
+}
